endlessly spam points
